Reconfigure testing framework.